# THIS-IS-A-TEST

./: .gitignore  CLAUDE.md  README.md  README_AGENT.md  comments  docker-compose.yml
Backend/: README_AGENT.md  pyproject.toml
Backend/app/: crud.py  main.py
Backend/app/alembic/: env.py
Backend/app/alembic/versions/: 0872e929f6d1_relation_between_child_and_order_item.py  0b72ad7011d1_relation_between_child_and_order_item_.py  8a018563c290_create_models.py
Backend/app/api/: api_v1.py  deps.py  main.py  routes.py
Backend/app/api/routes/: admin.py  bundles.py  client_groups.py  client_management.py  client_plans.py  credits.py  dashboard.py  forms.py  items.py  locations.py  login.py  orders.py  services.py  users.py  utils.py  visits.py  zones.py
Backend/app/controllers/: auth_controller.py  child_controller.py  purchase_controller.py  user_controller.py
Backend/app/core/: config.py  db.py  security.py
Backend/app/db/: __init__.py  database.py
Backend/app/models/: base_model.py  bundle.py  bundle_service.py  child.py  credit.py  index.py  location.py  order.py  order_item.py  role.py  service.py  session.py  user.py  visit.py  zone.py
Backend/app/schemas/: child.py  purchase.py  user.py
Backend/app/services/: auth_service.py  child_service.py  epayco.py  purchase_service.py  user_service.py
Backend/app/tests/: conftest.py  test_auth_login.py  test_create_child.py  test_purchase_playtime.py  test_user_registration.py
Backend/app/tests/crud/: test_user.py
Backend/app/tests/utils/: item.py  user.py
Backend/app/utils/: qr_code.py  utils.py
(+134 files in other folders)
